code: temp fix for navbar on mobile

--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -61,3 +61,35 @@ body {
   height: 2px;
   background-color: #574c4c;
 }
+
+@media screen and (max-width: 768px) {
+  .nav-elements ul li:not(:last-child) {
+    margin-right: 40px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #2f234f;
+    text-decoration: none;
+  }
+  .nav-elements ul {
+    flex-direction: column;
+    align-items: center;
+    margin-top: -333px;
+  }
+  .navbar {
+    height: 150px;
+    background-color: #fef7e5;
+    position: relative;
+  }
+  .container-navbar {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Align items to the start of the container */
+  }
+  .logo {
+    transform: scale(0.075);
+    margin-top: 0px;
+    margin-right:200px;
+  }
+}
